tests/errors/type_mismatch_modulo.dang
# Test modulo type mismatch
pub result = "hello" % 42
